...
        android:textSize="36sp"
        android:windowSoftInputMode="stateAlwaysHidden"
        tools:ignore="LabelFor" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/operations_tabs"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/basic_tab"
            android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="@string/tab_graph" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>


...
