...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_a"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/a"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_b"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b"
            android:textSize="18sp" />
...
