<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history" />

    </LinearLayout>

    <TextView
        android:id="@+id/history_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:padding="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp" />
</LinearLayout>
